cmake_minimum_required(VERSION 3.5)

project(ex17-16 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(ex17-16
    fileio.cpp)

include(GNUInstallDirs)
install(TARGETS ex17-16
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
